--- a/Web/Job application.html
+++ b/Web/Job application.html
@@ -1,86 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apply for a job</title>
-    <link rel="stylesheet" href="styles/Job application.css">
-    <link rel="stylesheet" href="styles/nav-bar.css"> 
-    <link rel="stylesheet" href="styles/base.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Apply for a Job</title>
+  <link rel="stylesheet" href="styles/Job application.css">
+  <link rel="stylesheet" href="styles/nav-bar.css">
+  <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
   <header class="site-header">
-  <div class="container header-inner">
-    <a class="brand" href="index.html" aria-label="CodeWave home"><img src="images/logo.svg" alt="CodeWave logo" id="nav-bar-logo"height="32"/></a>
-    <nav aria-label="Main">
-      <ul class="nav">
-        <li><a class="active" href="home.html">Home</a></li>
-        <li><a class="" href="jobs.html">Jobs</a></li>
-        <li><a class="" href="about.html">About</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-    <div class="container">
+    <div class="container header-inner">
+      <a class="brand" href="index.html" aria-label="CodeWave home">
+        <img src="images/logo.svg" alt="CodeWave logo" id="nav-bar-logo" height="32"/>
+      </a>
+      <nav aria-label="Main">
+        <ul class="nav">
+          <li><a class="active" href="home.html">Home</a></li>
+          <li><a href="jobs.html">Jobs</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="container">
     <header>
-        <h1>Apply for a job</h1>
+      <h1>Apply for a Job</h1>
+      <p>Please complete this form to apply for a cybersecurity position with us.</p>
     </header>
-        <form class="app-form">
- <form class="app-form">
-  <div class="field">
-    <label for="name">Full Name</label>
-    <input id="name" type="text" required>
-  </div>
 
-  <div class="field">
-    <label for="email">Email Address</label>
-    <input id="email" type="email" required>
-  </div>
+    <form class="app-form">
+      <div class="field">
+        <label for="name">Full Name</label>
+        <input id="name" type="text" required>
+      </div>
 
-  <div class="field">
-    <label for="phone">Phone Number</label>
-    <input id="phone" type="tel">
-  </div>
+      <div class="field">
+        <label for="email">Email Address</label>
+        <input id="email" type="email" required>
+      </div>
 
-  <div class="field">
-    <label for="position">Position Applying For</label>
-    <input id="position" type="text">
-  </div>
+      <div class="field">
+        <label for="phone">Phone Number</label>
+        <input id="phone" type="tel">
+      </div>
 
-  <div class="field">
-    <label for="experience">Years of Cybersecurity / IT Experience</label>
-    <input id="experience" type="number" min="0">
-  </div>
+      <div class="field">
+        <label for="position">Position Applying For</label>
+        <input id="position" type="text">
+      </div>
 
-  <div class="field">
-    <label for="skills">Key Cybersecurity Skills (e.g., Networking, Ethical Hacking, Risk Management)</label>
-    <textarea id="skills" rows="3"></textarea>
-  </div>
+      <div class="field">
+        <label for="experience">Years of Cybersecurity / IT Experience</label>
+        <input id="experience" type="number" min="0">
+      </div>
 
-  <div class="field">
-    <label for="certifications">Relevant Certifications (e.g., CompTIA Security+, CISSP, CEH)</label>
-    <input id="certifications" type="text">
-  </div>
+      <div class="field">
+        <label for="skills">Key Cybersecurity Skills (e.g., Networking, Ethical Hacking, Risk Management)</label>
+        <textarea id="skills" rows="3"></textarea>
+      </div>
 
-  <div class="field">
-    <label for="tools">Familiar Security Tools (e.g., Wireshark, Metasploit, SIEM platforms)</label>
-    <textarea id="tools" rows="3"></textarea>
-  </div>
+      <div class="field">
+        <label for="certifications">Relevant Certifications (e.g., CompTIA Security+, CISSP, CEH)</label>
+        <input id="certifications" type="text">
+      </div>
 
-  <div class="field">
-    <label for="incident">Describe a time you handled a security incident</label>
-    <textarea id="incident" rows="4"></textarea>
-  </div>
+      <div class="field">
+        <label for="tools">Familiar Security Tools (e.g., Wireshark, Metasploit, SIEM platforms)</label>
+        <textarea id="tools" rows="3"></textarea>
+      </div>
 
-  <div class="field">
-    <label for="resume">Upload Resume</label>
-    <input id="resume" type="file" required>
-  </div>
+      <div class="field">
+        <label for="incident">Describe a time you handled a security incident</label>
+        <textarea id="incident" rows="4"></textarea>
+      </div>
 
-  <div class="field">
-    <label for="cover">Cover Letter</label>
-    <textarea id="cover" rows="5"></textarea>
-  </div>
+      <div class="field">
+        <label for="resume">Upload Resume</label>
+        <input id="resume" type="file" required>
+      </div>
 
-  <button type="submit" class="apply-btn">Submit Application</button>
-</form>
+      <div class="field">
+        <label for="cover">Cover Letter</label>
+        <textarea id="cover" rows="5"></textarea>
+      </div>
+
+      <button type="submit" class="apply-btn">Submit Application</button>
+    </form>
+  </div>
+  <footer class="site-footer">
+      <div class="container footer-inner">
+        <p>&copy; CodeWave Pvt Ltd — COS10026</p>
+      </div>
+    </footer>
+</body>
+</html>
