--- a/Web/Job application.html
+++ b/Web/Job application.html
@@ -107,7 +107,7 @@
       </div>
 
       <!-- Submit button -->
-      <button type="submit" class="apply-btn">Submit Application</button>
+      <button type="button" class="apply-btn" onclick="window.location.href='Thank you.html'">Submit Application</button> <!-- taken from generated AI, ChatGPT 5 -->
     </form>
   </div>
 
@@ -119,3 +119,4 @@
   </footer>
 </body>
 </html>
+
