Update and rename Job application.html to Job_application.html

--- a/Web/Job_application.html
+++ b/Web/Job_application.html
@@ -6,7 +6,7 @@
   <title>Apply for a Job</title>
   
   <!-- External CSS stylesheets -->
-  <link rel="stylesheet" href="styles/Job application.css">
+  <link rel="stylesheet" href="styles/Job_application.css">
   <link rel="stylesheet" href="styles/nav-bar.css">
   <link rel="stylesheet" href="styles/base.css">
 </head>
@@ -119,4 +119,5 @@
   </footer>
 </body>
 </html>
+
 
