--- a/Web/Job_application.html
+++ b/Web/Job_application.html
@@ -16,7 +16,7 @@
     <div class="container header-inner">
       <!-- Logo with link to home page -->
       <a class="brand" href="index.html" aria-label="CodeWave home">
-        <img src="images/logo.svg" alt="CodeWave logo" id="nav-bar-logo" height="32"/>
+        <img src="images/logo.svg" alt="CodeWave logo" id="nav-bar-logo" height="32">
       </a>
       
       <!-- Navigation links -->
@@ -119,5 +119,6 @@
   </footer>
 </body>
 </html>
+
 
 
