--- a/Web/Jobs.html
+++ b/Web/Jobs.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobile-friendly scaling -->
         
         <!-- External CSS styles -->
-        <link rel="stylesheet" href="styles/base.css"/>
-        <link rel="stylesheet" href="styles/nav-bar.css"/>
-        <link rel="stylesheet" href="styles/Jobs.css"/>
+        <link rel="stylesheet" href="styles/base.css">
+        <link rel="stylesheet" href="styles/nav-bar.css">
+        <link rel="stylesheet" href="styles/Jobs.css">
         
         <title>Document</title>
     </head>
@@ -17,7 +17,7 @@
     <div class="container header-inner">
         <!-- Logo linking to homepage -->
         <a class="brand" href="index.html" aria-label="CodeWave home">
-            <img src="images/logo.svg" alt="CodeWave logo" id="nav-bar-logo" height="32"/>
+            <img src="images/logo.svg" alt="CodeWave logo" id="nav-bar-logo" height="32">
         </a>
         <!-- Navigation bar -->
         <nav aria-label="Main">
@@ -31,7 +31,7 @@
 </header>
 
 <!-- Hero image -->
-<img src="images/cyber-security.png" alt="photo of Cyber security" class="image" loading="lazy"/>
+<img src="images/cyber-security.png" alt="photo of Cyber security" class="image" loading="lazy">
 
 <!-- Main content -->
 <div class="container">
@@ -173,7 +173,7 @@
 
 <!-- Apply button linking to application page -->
 <div class="btn-container">
-    <a href="job application.html" class="apply-btn">Apply Now</a>
+    <a href="job_application.html" class="apply-btn">Apply Now</a>
 </div>
 
 <!-- Footer -->
@@ -184,3 +184,4 @@
 </footer>
 </body>
 </html>
+
