--- a/Web/Job_application.html
+++ b/Web/Job_application.html
@@ -117,8 +117,15 @@
         <p>&copy; CodeWave Pvt Ltd — COS10026</p>
       </div>
   </footer>
+  <script>
+      document.querySelector('.app-form').addEventListener('submit', function(e) {
+        e.preventDefault();
+        window.location.href = 'Thank you.html';
+      });
+  </script>
 </body>
 </html>
+
 
 
 
