--- a/Web/Jobs.html
+++ b/Web/Jobs.html
@@ -173,7 +173,7 @@
 
 <!-- Apply button linking to application page -->
 <div class="btn-container">
-    <a href="job_application.html" class="apply-btn">Apply Now</a>
+    <a href="apply.html" class="apply-btn">Apply Now</a>
 </div>
 
 <!-- Footer -->
@@ -184,4 +184,5 @@
 </footer>
 </body>
 </html>
+
 
