--- a/Web/Jobs.html
+++ b/Web/Jobs.html
@@ -36,7 +36,7 @@
 <!-- Main content -->
 <div class="container">
     <!-- Intro heading -->
-    <h1>Cyber security (company name)</h1>
+    <h1>CodeWave</h1>
     <p><b>Apply now for exciting opportunities in Cyber Security. Fill out the form below to start your journey in protecting data, systems, and networks.</b></p>
     <hr>
 
@@ -184,5 +184,6 @@
 </footer>
 </body>
 </html>
+
 
 
