Fixed the what we do part (from software and cloud to cybersecurity), changed some css (added embedded and in-line css), add description for me (Tony), added an icon to the website.

--- a/Web/Jobs.html
+++ b/Web/Jobs.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"> <!-- Sets character encoding -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobile-friendly scaling -->
         <link rel="icon" href="images/logo.svg" type="image/svg+xml"/>
-        
+
         <!-- External CSS styles -->
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/nav-bar.css">
@@ -174,7 +174,7 @@
 
 <!-- Apply button linking to application page -->
 <div class="btn-container">
-    <a href="job application.html" class="apply-btn">Apply Now</a>
+    <a href="Job_application.html" class="apply-btn">Apply Now</a>
 </div>
 
 <!-- Footer -->
