--- a/Web/Job_application.html
+++ b/Web/Job_application.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="images/logo.svg" type="image/svg+xml"/>
   
   <!-- External CSS stylesheets -->
-  <link rel="stylesheet" href="styles/Job application.css">
+  <link rel="stylesheet" href="styles/Job_application.css">
   <link rel="stylesheet" href="styles/nav-bar.css">
   <link rel="stylesheet" href="styles/base.css">
 </head>
